Fix title wrap

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@
       display: block;
       font-size: 14px;
       margin-top: 6px;
+      overflow-wrap: anywhere;
     }
 
     &-preloader {
